# advent_rs_20

./: .gitignore  Cargo.toml
benchmarks/: Cargo.toml
benchmarks/benches/: advent_benchmarks.rs
day_1/: Cargo.toml
day_1/src/: lib.rs
day_2/: Cargo.toml
day_2/src/: lib.rs
day_3/: Cargo.toml
day_3/src/: lib.rs
day_4/: Cargo.toml
day_4/src/: lib.rs
day_5/: Cargo.toml
day_5/src/: lib.rs
day_6/: Cargo.toml
day_6/src/: lib.rs
