[package]
name = "benchmarks"
version = "0.0.0"
authors = ["Zachary Thomas <zdcthomas@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
day_1 = { path = "../day_1" }

[[bench]]
name = "advent_benchmarks"
harness = false
